Ya se logro terminar el primer proyecto

--- a/CrudNet8MVC/Views/Home/Index.cshtml
+++ b/CrudNet8MVC/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class = "row ">
     <div class = "offset-9 col-3 mb-3 ">
-        <a asp-action="Crear" asp-controller="Inicio" class="btn btn-secondary d-block mx-auto btn-lg">
+        <a asp-action="Crear" asp-controller="Home" class="btn btn-secondary d-block mx-auto btn-lg">
                 <i class="fa fa-plus" aria-hidden="true"></i> Nuevo usuario
         </a>
     </div> 
@@ -49,8 +49,15 @@
                                             <td>@Html.DisplayFor(m => item.Email)</td>
                                             <td>@Html.DisplayFor(m => item.FechaCreacion)</td>
                                             <td>
-                                                <a class="btn bt-warning" asp-action="Editar" asp-route-id="@item.Id"></a>
-                                                <i class="fa fa-pencil" aria-hidden="true"></i>Editar
+                                                <a class="btn btn-warning" asp-action="Editar" asp-route-id="@item.Id">
+                                                    <i class="fa fa-pencil" aria-hidden="true"></i>Editar
+                                                </a>
+                                                <a class="btn btn-secondary" asp-action="Detalle" asp-route-id="@item.Id">
+                                                    <i class="fa fa-info-circle" aria-hidden="true"></i>Detalle
+                                                </a>
+                                                <a class="btn btn-danger" asp-action="Borrar" asp-route-id="@item.Id">
+                                                    <i class="fa fa-eraser" aria-hidden="true"></i>Borrar
+                                                </a>
                                             </td>
                                     </tr>
                                         
@@ -69,4 +76,4 @@
 
     </div>
 
-</di>
+</div>
